<resources>


    <string name="app_name">Routine Maker</string>

    <!-- LogIn Activity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logo">Application Logo</string>

    <!-- Register Activity -->
    <string name="register_firstname">First Name</string>
    <string name="register_lastname">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date Of Birth</string>

    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>>
    <string name="change_password">Change Password</string>

    <!-- Profile fragment -->
    <string name="update_details">Update Personal Information</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_settings">Account Settings</string>

    <string name="edit_first_name">Edit first name button</string>
    <string name="edit_last_name">Edit last name button</string>
    <string name="edit_email">Edit email button</string>
    <string name="edit_date_of_birth">Edit date of birth button</string>

    <string name="new_first_name">New First Name</string>
    <string name="new_last_name">New Last Name</string>
    <string name="new_email">New Email</string>
    <string name="new_date_of_birth">New Date Of Birth</string>

    <!-- Navigation Bar -->
    <string name="navigation_draw_open">Open navigation drawer</string>
    <string name="navigation_draw_close">Close navigation drawer</string>
    <string name="routines">Routines</string>
    <string name="profile">Profile</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="download">Download Routine</string>
    <string name="account">Account</string>
    <string name="logout">Log Out</string>
    
    <!-- Survey questions -->
    <string name="survey_fitness_goal">What is your current fitness goal?</string>
    <string-array name="survey_fitness_goal_answer">
        <item>Strength</item>
        <item>Hypertrophy</item>
        <item>Fat Loss</item>
    </string-array>

    <string name="survey_days_available">Which days do you have available for the gym?</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="survey_height">What is your height?</string>
    <string name="survey_weight_hint">Weight</string>
    <string name="survey_kg">Kg</string>
    <string name="survey_lbs">Lbs</string>

    <string name="survey_weight">What is your weight?</string>
    <string name="survey_height_hint">Height</string>
    <string name="survey_cm">Cm</string>
    <string name="survey_feet">Ft</string>

    <string name="survey_create">Create Routine</string>

    <!-- ActivityRoutineView && RecyclerRoutine -->
    <string name="title">Title</string>
    <string name="goal">Goal</string>
    <string name="days">Days</string>

    <string name="update_routine">Update Routine</string>

    <string name="first_block">Week 1–4</string>
    <string name="second_block">Week 5–8</string>
    <string name="third_block">Week 9–12</string>

    <string name="main">Main</string>
    <string name="secondary">Secondary</string>
    <string name="accessory">Accessory</string>
    <string name="cardio">Cardio</string>

    <string name="loading">Loading…</string>

    <string name="warmup">Warmup</string>
    <string name="warmup_protocol">When warming up for an exercise, do sets of prescribed repetitions starting with the empty bar. Start increasing the weight until the RPE matches the first prescribed working set. Increase/decrease 5% of the total weight for that RPE when jumping to a different one. The 5% would increase/decrease usually represent the next RPE bracket</string>

    <string name="exercises">Exercises</string>
    <string name="exercise_explanation">Before performing any exercise, please look up the correct form or ask a member of staff from the training facility to give you some advice.\n\nThese exercises prescriptions are flexible. If you dislike any exercise or have any prior injury which prevents you from performing it, please substitute it with one that engages the same muscles and bypasses those issues.</string>

    <string name="intensity">Intensity</string>
    <string name="intensity_explanation">Rate of Perceived Exhaustion (RPE) is how hard something feels to you at the time. It is a subjective measure of your strength at a given time. We rate this on a scale from one to ten. The higher the number, the harder the set felt. A scale has been added to the bottom of the intensity table to show what each RPE means.\n\nAs a beginner you want to create a solid foundation by prioritising movement patterns instead of using high loads. That is the reason why most of the exercises are performed at a lower RPE than usual.</string>

    <string name="rpe">Rate of perceived exhaustion scale</string>
    <string name="rpe_explanation">10: Maximal, no reps left in the tank\n\n9: Last rep is tough but still one rep left in the tank\n\n8: Weight is too heavy to maintain fast bar speed but isn’t a struggle; 2–4 reps left\n\n7: Weight moves quickly when maximal force is applied to the weight; “speed weight”\n\n6: Light speed work; moves quickly with moderate force\n\n5: Most warm-up weights\n\n4: Recovery; usually 20 plus rep sets; not hard but intended to flush the muscle\n\nAn RPE below four isn’t important.</string>
    <!-- RoutineFragment -->
    <string name="delete_routine">Delete routine button</string>

</resources>
