<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_routines"
            android:icon="@drawable/ic_routines"
            android:title="@string/routines" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

    </group>

    <item android:title="@string/communication">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item android:id="@+id/nav_download"
                android:icon="@drawable/ic_download"
                android:title="@string/download" />
        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <item android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>